Correzione dei tag

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>
-        <p>Hello World</p>
-        <img src="Cat Hello.jfif" alt="">
+        Hello World
     </h1>
+    <img src="Cat Hello.jfif" alt="">
 </body>
 </html>
